--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
-  }
+    "strictNullChecks": false,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "types": []
+  },
+  "include": ["src/**/*", "src/types/**/*"]
 }
